# coincise

./: .cursorrules  .gitignore  .prettierrc  .prettierrc.json  AGENTS.md  CLAUDE.md  README.md  TODO.md  TWITTER_WORKFLOW.md  api-index.json  convert-docs.js  copilot-firewall-allowlist.json  copilot-firewall-allowlist.md  create-venue-issues.js  create-venue-issues.sh  deribit-api-documentation.md  docs-changelog.md  docs_commits.txt  eslint.config.js  explore-xt-detailed.js  explore-xt-endpoint.js  explore-xt-spot.js  explore-xt.js  fetch_spec.py  formatdocs.sh  links.html  links.md  llms-full.txt  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-pr-summary.md  trading-api.md  venue-integration-issues.md
.claude/commands/: integrate-exchange.md  test-github-action.md  upgrade-deps.md
.github/: copilot-instructions.md
coinbase_fix_md/: Cargo.toml  README.md  fix_settings.cfg
docs/: .pages  index.md
orderbook/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
orderbook/crates/agent-support/: Cargo.toml
orderbook/crates/agent-support/src/: lib.rs
orderbook/crates/orderbook/: Cargo.toml
orderbook/crates/orderbook-server/: Cargo.toml  build.rs
orderbook/crates/orderbook-server/proto/: orderbook.proto
orderbook/crates/orderbook-server/src/: grpc.rs  lib.rs  main.rs
orderbook/crates/orderbook/benches/: order_book.rs
orderbook/crates/orderbook/src/: book.rs  error.rs  events.rs  lib.rs  matching.rs  risk.rs  types.rs
site/: mkdocs.yml
specs/: README.md
tools/: README.md  fetch_icons.js  get_cmc_ids.sh
(+4839 files in other folders)
