[package]
name = "agent-support"
version = "0.1.0"
edition = "2021"

[dependencies]
orderbook = { path = "../orderbook" }
orderbook-server = { path = "../orderbook-server" }
thiserror = "1.0"
tonic = { version = "0.10", features = ["transport"] }
tokio-stream = "0.1"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "time"] }

