[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1"
slab = "0.4"
metrics = "0.21"
tokio = { version = "1.32", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "order_book"
harness = false
